fixed problems from split transaction work, added FundNegativeEnvelopes command